--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.6.0",
     "react-redux": "^8.0.5",
     "react-toastify": "^9.1.1",
     "typescript": "4.8.4"
