--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "framer-motion": "^7.6.6",
+    "lorem-ipsum": "^2.0.8",
     "next": "13.0.3",
     "next-auth": "^4.16.4",
     "next-themes": "^0.2.1",
@@ -25,9 +26,12 @@
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.5",
     "react-toastify": "^9.1.1",
+    "shortid": "^2.2.16",
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.8",
+    "@types/shortid": "^0.0.29",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
